modified:   static/app.js modified:   static/style.css

--- a/static/style.css
+++ b/static/style.css
@@ -234,6 +234,7 @@ audio{
     background-color: #fefefe;
     margin: 15% auto;
     padding: 20px;
+    padding-top: 24px;
     border: 1px solid #888;
     width: 80%;
     max-width: 400px;
