--- a/static/style.css
+++ b/static/style.css
@@ -101,6 +101,10 @@ body {
     display: inline-block;
 }
 .message-content a {
+    max-width: 100%;
+    word-wrap: break-word;
+    word-break: break-word; 
+    white-space: normal;
     text-decoration: none;
 }
 
@@ -230,52 +234,6 @@ audio{
     font-size: 20px;
     cursor: pointer;
 }
-.modal {
-    display: none;
-    position: fixed;
-    z-index: 1;
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100%;
-    overflow: auto;
-    background-color: rgba(0,0,0,0.4);
-}
-.modal-content {
-    position: relative;
-    font-size: 16px;
-    text-align: center;
-    background-color: #fefefe;
-    margin: 15% auto;
-    padding: 20px;
-    padding-top: 24px;
-    border: 1px solid #888;
-    width: 80%;
-    max-width: 400px;
-    border-radius: 8px;
-    max-height: 80vh;
-    overflow-y: auto;
-}
-.close {
-    position: absolute;
-    top: 10px;
-    right: 10px;
-    padding-left: 5px;
-    padding-right: 5px;
-    background-color: #0084ff;
-    border-radius: 6px;
-    color: white;
-    float: right;
-    font-size: 22px;
-    font-weight: bold;
-    cursor: pointer;
-}
-.close:hover,
-.close:focus {
-    color: red;
-    text-decoration: none;
-    cursor: pointer;
-}
 .timestamp {
     margin: 10px 0;
     font-size: 12px;
@@ -295,4 +253,54 @@ audio{
 }
 #modalMessage {
     white-space: pre-line;
+}
+#roomList {
+    flex-direction: column;
+    align-items: center;
+}
+
+.room-list {
+    width: 100%;
+    flex-direction: column;
+    padding: 10px;
+    box-sizing: border-box;
+}
+
+.room-item {
+    margin-top: 10px;
+    padding: 15px;
+    background-color: #f0f2f5;
+    border-radius: 6px;
+    cursor: pointer;
+    text-align: center;
+}
+
+.room-item:hover {
+    background-color: #e0e0e0;
+}
+
+#backToRoomListBtn {
+    position: absolute;
+    left: 10px;
+    top: 50%;
+    transform: translateY(-50%);
+    background: none;
+    border: none;
+    color: white;
+    font-size: 20px;
+    cursor: pointer;
+}
+#addRoomBtn {
+    width: calc( 100% - 20px );
+    height: 40px;
+    margin: 10px;
+    border: none;
+    background-color: #0084ff;
+    color: white;
+    padding: 10px;
+    border-radius: 6px;
+    cursor: pointer;
+    display: block;
+    align-items: center;
+    justify-content: center;
 }
